--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <phpunit bootstrap="./vendor/autoload.php" colors="true">
     <testsuites>
-        <testsuite name="Zend\\Expressive FastRoute Tests">
+        <testsuite name="Mezzio FastRoute Tests">
             <directory>./test</directory>
         </testsuite>
     </testsuites>
