--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,28 @@
 {
-    "name": "zendframework/zend-expressive-fastroute",
-    "description": "FastRoute integration for Expressive",
-    "type": "library",
+    "name": "mezzio/mezzio-fastroute",
+    "description": "FastRoute integration for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "FastRoute",
         "http",
         "middleware",
         "psr",
         "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-fastroute/",
+        "issues": "https://github.com/mezzio/mezzio-fastroute/issues",
+        "source": "https://github.com/mezzio/mezzio-fastroute",
+        "rss": "https://github.com/mezzio/mezzio-fastroute/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.1-dev",
@@ -19,23 +31,24 @@
     },
     "require": {
         "php": "^5.5 || ^7.0",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^1.0",
         "nikic/fast-route": "^0.8.0",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^1.0"
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
-      "psr-4": {
-        "Zend\\Expressive\\Router\\": "src/"
-      }
+        "psr-4": {
+            "Mezzio\\Router\\": "src/"
+        }
     },
     "autoload-dev": {
-      "psr-4": {
-        "ZendTest\\Expressive\\Router\\": "test/"
-      }
+        "psr-4": {
+            "MezzioTest\\Router\\": "test/"
+        }
     },
     "scripts": {
         "check": [
@@ -47,5 +60,8 @@
         "cs-fix": "phpcbf",
         "test": "phpunit",
         "test-coverage": "phpunit --coverage-clover clover.xml"
+    },
+    "replace": {
+        "zendframework/zend-expressive-fastroute": "self.version"
     }
 }
