--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,28 @@
 {
-    "name": "zendframework/zend-expressive-fastroute",
-    "description": "FastRoute integration for Expressive",
-    "type": "library",
+    "name": "mezzio/mezzio-fastroute",
+    "description": "FastRoute integration for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "FastRoute",
         "http",
         "middleware",
         "psr",
         "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
+    "support": {
+        "docs": "https://docs.mezzio.dev/mezzio-fastroute/",
+        "issues": "https://github.com/mezzio/mezzio-fastroute/issues",
+        "source": "https://github.com/mezzio/mezzio-fastroute",
+        "rss": "https://github.com/mezzio/mezzio-fastroute/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
+    },
+    "config": {
+        "sort-packages": true
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "2.0-dev",
@@ -19,26 +31,27 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "nikic/fast-route": "^1.0.0",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^2.0",
         "fig/http-message-util": "^1.1",
-        "zendframework/zend-stdlib": "^3.1"
+        "laminas/laminas-stdlib": "^3.1",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^2.0",
+        "nikic/fast-route": "^1.0.0",
+        "psr/http-message": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7 || ^5.6",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "malukenho/docheader": "^0.1.5"
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5",
+        "phpunit/phpunit": "^4.7 || ^5.6"
     },
     "autoload": {
-      "psr-4": {
-        "Zend\\Expressive\\Router\\": "src/"
-      }
+        "psr-4": {
+            "Mezzio\\Router\\": "src/"
+        }
     },
     "autoload-dev": {
-      "psr-4": {
-        "ZendTest\\Expressive\\Router\\": "test/"
-      }
+        "psr-4": {
+            "MezzioTest\\Router\\": "test/"
+        }
     },
     "scripts": {
         "check": [
@@ -52,5 +65,8 @@
         "license-check": "docheader check src/ test/",
         "test": "phpunit",
         "test-coverage": "phpunit --coverage-clover clover.xml"
+    },
+    "replace": {
+        "zendframework/zend-expressive-fastroute": "self.version"
     }
 }
