--- a/composer.json
+++ b/composer.json
@@ -1,51 +1,24 @@
 {
-    "name": "zendframework/zend-expressive-fastroute",
-    "description": "FastRoute integration for Expressive",
+    "name": "mezzio/mezzio-fastroute",
+    "description": "FastRoute integration for Mezzio",
     "license": "BSD-3-Clause",
     "keywords": [
-        "expressive",
+        "laminas",
+        "mezzio",
         "FastRoute",
         "http",
         "middleware",
         "psr",
-        "psr-7",
-        "zf",
-        "zendframework",
-        "zend-expressive"
+        "psr-7"
     ],
+    "homepage": "https://mezzio.dev",
     "support": {
-        "issues": "https://github.com/zendframework/zend-expressive-fastroute/issues",
-        "source": "https://github.com/zendframework/zend-expressive-fastroute",
-        "rss": "https://github.com/zendframework/zend-expressive-fastroute/releases.atom",
-        "slack": "https://zendframework-slack.herokuapp.com",
-        "forum": "https://discourse.zendframework.com/c/questions/expressive"
-    },
-    "require": {
-        "php": "^5.6 || ^7.0",
-        "fig/http-message-util": "^1.1.2",
-        "nikic/fast-route": "^1.2",
-        "psr/container": "^1.0",
-        "psr/http-message": "^1.0.1",
-        "zendframework/zend-expressive-router": "^2.4",
-        "zendframework/zend-stdlib": "^3.1 || 2.*"
-    },
-    "require-dev": {
-        "malukenho/docheader": "^0.1.5",
-        "phpunit/phpunit": "^5.7.23 || ^6.4.3",
-        "zendframework/zend-coding-standard": "~1.0.0"
-    },
-    "conflict": {
-        "container-interop/container-interop": "<1.2.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Zend\\Expressive\\Router\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "ZendTest\\Expressive\\Router\\": "test/"
-        }
+        "docs": "https://docs.mezzio.dev/mezzio-fastroute/",
+        "issues": "https://github.com/mezzio/mezzio-fastroute/issues",
+        "source": "https://github.com/mezzio/mezzio-fastroute",
+        "rss": "https://github.com/mezzio/mezzio-fastroute/releases.atom",
+        "chat": "https://laminas.dev/chat",
+        "forum": "https://discourse.laminas.dev"
     },
     "config": {
         "sort-packages": true
@@ -54,6 +27,34 @@
         "branch-alias": {
             "dev-master": "2.2.x-dev",
             "dev-develop": "3.0.x-dev"
+        }
+    },
+    "require": {
+        "php": "^5.6 || ^7.0",
+        "fig/http-message-util": "^1.1.2",
+        "laminas/laminas-stdlib": "^3.1 || 2.*",
+        "laminas/laminas-zendframework-bridge": "^1.0",
+        "mezzio/mezzio-router": "^2.4",
+        "nikic/fast-route": "^1.2",
+        "psr/container": "^1.0",
+        "psr/http-message": "^1.0.1"
+    },
+    "require-dev": {
+        "laminas/laminas-coding-standard": "~1.0.0",
+        "malukenho/docheader": "^0.1.5",
+        "phpunit/phpunit": "^5.7.23 || ^6.4.3"
+    },
+    "conflict": {
+        "container-interop/container-interop": "<1.2.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Mezzio\\Router\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MezzioTest\\Router\\": "test/"
         }
     },
     "scripts": {
@@ -67,5 +68,8 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
         "license-check": "docheader check src/ test/"
+    },
+    "replace": {
+        "zendframework/zend-expressive-fastroute": "self.version"
     }
 }
