--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,11 @@
         }
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.3 || ~8.0.0",
         "fig/http-message-util": "^1.1.2",
         "laminas/laminas-stdlib": "^2.0 || ^3.1",
         "laminas/laminas-zendframework-bridge": "^1.0",
-        "mezzio/mezzio-router": "^3.0",
+        "mezzio/mezzio-router": "^3.2",
         "nikic/fast-route": "^1.2",
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1"
@@ -44,7 +44,7 @@
         "laminas/laminas-stratigility": "^3.0",
         "malukenho/docheader": "^0.1.6",
         "mikey179/vfsstream": "^1.6.7",
-        "phpunit/phpunit": "^7.0.2"
+        "phpunit/phpunit": "^9.4.1"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0"
