--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "laminas/laminas-stdlib": "^2.0 || ^3.1",
         "mezzio/mezzio-router": "^3.7",
         "nikic/fast-route": "^1.2",
-        "psr/container": "^1.0",
+        "psr/container": "^1.0 || ^2.0",
         "psr/http-message": "^1.0.1"
     },
     "require-dev": {
