--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,11 @@
         "forum": "https://discourse.laminas.dev"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "composer/package-versions-deprecated": true
+        }
     },
     "extra": {
         "laminas": {
@@ -29,7 +33,7 @@
         }
     },
     "require": {
-        "php": "^7.3 || ~8.0.0 || ~8.1.0",
+        "php": "^7.4 || ~8.0.0 || ~8.1.0",
         "fig/http-message-util": "^1.1.2",
         "laminas/laminas-stdlib": "^2.0 || ^3.1",
         "mezzio/mezzio-router": "^3.7",
