--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,10 @@
-/.coveralls.yml export-ignore
-/.docheader export-ignore
-/.gitattributes export-ignore
+/.github/ export-ignore
+/test/ export-ignore
 /.gitignore export-ignore
-/.travis.yml export-ignore
-/docs/ export-ignore
+/.gitattributes export-ignore
+/.laminas-ci.json export-ignore
+/composer.lock export-ignore
 /phpcs.xml export-ignore
 /phpunit.xml.dist export-ignore
-/test/ export-ignore
+/psalm.xml export-ignore
+/psalm-baseline.xml export-ignore
