--- a/composer.json
+++ b/composer.json
@@ -45,14 +45,14 @@
         "psr/http-message": "^1.0.1"
     },
     "require-dev": {
-        "laminas/laminas-coding-standard": "~2.2.0",
-        "laminas/laminas-diactoros": "^2.5.0",
-        "laminas/laminas-stratigility": "^3.0",
-        "mikey179/vfsstream": "^1.6.10",
+        "laminas/laminas-coding-standard": "~2.4.0",
+        "laminas/laminas-diactoros": "^2.17.0",
+        "laminas/laminas-stratigility": "^3.8.0",
+        "mikey179/vfsstream": "^1.6.11",
         "phpspec/prophecy-phpunit": "^2.0",
-        "phpunit/phpunit": "^9.4.1",
-        "psalm/plugin-phpunit": "^0.15.1",
-        "vimeo/psalm": "^4.6"
+        "phpunit/phpunit": "^9.5.24",
+        "psalm/plugin-phpunit": "^0.17.0",
+        "vimeo/psalm": "^4.26.0"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
@@ -71,6 +71,7 @@
     "scripts": {
         "check": [
             "@cs-check",
+            "@static-analysis",
             "@test"
         ],
         "cs-check": "phpcs",
