--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "composer/package-versions-deprecated": true
         },
         "platform": {
-            "php": "7.4.99"
+            "php": "8.0.99"
         }
     },
     "extra": {
@@ -36,7 +36,7 @@
         }
     },
     "require": {
-        "php": "^7.4 || ~8.0.0 || ~8.1.0",
+        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
         "fig/http-message-util": "^1.1.2",
         "laminas/laminas-stdlib": "^2.0 || ^3.1",
         "mezzio/mezzio-router": "^3.7",
@@ -46,13 +46,13 @@
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.4.0",
-        "laminas/laminas-diactoros": "^2.17.0",
-        "laminas/laminas-stratigility": "^3.8.0",
+        "laminas/laminas-diactoros": "^2.18",
+        "laminas/laminas-stratigility": "^3.9",
         "mikey179/vfsstream": "^1.6.11",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "phpunit/phpunit": "^9.5.24",
+        "phpspec/prophecy-phpunit": "^2.0.1",
+        "phpunit/phpunit": "^9.5.25",
         "psalm/plugin-phpunit": "^0.17.0",
-        "vimeo/psalm": "^4.26.0"
+        "vimeo/psalm": "^4.28"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
