--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "composer/package-versions-deprecated": true
         },
         "platform": {
-            "php": "8.0.99"
+            "php": "8.1.99"
         }
     },
     "extra": {
@@ -36,9 +36,9 @@
         }
     },
     "require": {
-        "php": "~8.0.0 || ~8.1.0 || ~8.2.0",
+        "php": "~8.1.0 || ~8.2.0",
         "fig/http-message-util": "^1.1.2",
-        "laminas/laminas-stdlib": "^2.0 || ^3.1",
+        "laminas/laminas-stdlib": "^3.1",
         "mezzio/mezzio-router": "^3.7",
         "nikic/fast-route": "^1.2",
         "psr/container": "^1.0 || ^2.0",
@@ -49,9 +49,9 @@
         "laminas/laminas-diactoros": "^2.24",
         "laminas/laminas-stratigility": "^3.9",
         "mikey179/vfsstream": "^1.6.11",
-        "phpunit/phpunit": "^9.5.27",
+        "phpunit/phpunit": "^10.0.17",
         "psalm/plugin-phpunit": "^0.18.4",
-        "vimeo/psalm": "^5.4"
+        "vimeo/psalm": "^5.8"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
