--- a/composer.json
+++ b/composer.json
@@ -36,22 +36,22 @@
         }
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0",
-        "fig/http-message-util": "^1.1.2",
-        "laminas/laminas-stdlib": "^3.1",
-        "mezzio/mezzio-router": "^3.14",
-        "nikic/fast-route": "^1.2",
-        "psr/container": "^1.0 || ^2.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "fig/http-message-util": "^1.1.5",
+        "laminas/laminas-stdlib": "^3.18",
+        "mezzio/mezzio-router": "^3.17",
+        "nikic/fast-route": "^1.3",
+        "psr/container": "^1.0 || ^2.0.2",
         "psr/http-message": "^1.0.1 || ^2.0.0"
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.5.0",
-        "laminas/laminas-diactoros": "^3.0.0",
-        "laminas/laminas-stratigility": "^3.9",
+        "laminas/laminas-diactoros": "^3.3.0",
+        "laminas/laminas-stratigility": "^3.11",
         "mikey179/vfsstream": "^1.6.11",
-        "phpunit/phpunit": "^10.1.2",
+        "phpunit/phpunit": "^10.4.2",
         "psalm/plugin-phpunit": "^0.18.4",
-        "vimeo/psalm": "^5.11"
+        "vimeo/psalm": "^5.15"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
