--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,9 @@
         }
     },
     "require": {
-        "php": "~8.1.0 || ~8.2.0 || ~8.3.0",
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "fig/http-message-util": "^1.1.2",
-        "laminas/laminas-stdlib": "^3.1",
+        "laminas/laminas-stdlib": "^3.19.0",
         "mezzio/mezzio-router": "^3.14",
         "nikic/fast-route": "^1.2",
         "psr/container": "^1.0 || ^2.0",
@@ -46,12 +46,12 @@
     },
     "require-dev": {
         "laminas/laminas-coding-standard": "~2.5.0",
-        "laminas/laminas-diactoros": "^3.3.0",
-        "laminas/laminas-stratigility": "^4.0",
-        "mikey179/vfsstream": "^1.6.11",
-        "phpunit/phpunit": "^10.5.9",
+        "laminas/laminas-diactoros": "^3.4.0",
+        "laminas/laminas-stratigility": "^4.0.2",
+        "mikey179/vfsstream": "^1.6.12",
+        "phpunit/phpunit": "^10.5.36",
         "psalm/plugin-phpunit": "^0.19.0",
-        "vimeo/psalm": "^5.21.1"
+        "vimeo/psalm": "^5.26.1"
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
